[project]
name = "brane"
version = "0.1.0"
description = "brane - Local OCR for text and sheet music"
requires-python = ">=3.12"
dependencies = [
    "ollama",
    "click",
    "homr",
    "PyMuPDF",
]

[project.scripts]
brane = "cli:main"

[tool.setuptools]
py-modules = ["cli", "ocr_engine", "music_engine", "prompts"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
